--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "config": "^3.3.6",
+    "debug": "^3.1.0",
     "mongoose": "^5.12.2"
   }
 }
